--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
 version: '3.5'
 
+volumes:
+    mongodb_api:
+    mongodb_auth:
+
 services:
     api:
         build: ./api
+        container_name: docker-api
         command: npm run start
         restart: unless-stopped
         ports:
@@ -14,5 +19,28 @@ services:
         depends_on:
             - api_db
 
+    auth:
+        build: ./auth
+        container_name: docker-auth
+        command: npm run start
+        restart: unless-stopped
+        ports:
+            - 3001:3001
+        environment:
+            - PORT=3001
+            - HOST=http://realworld-docker.com/
+            - MONGO_URL=mongodb://auth_db:27017/auth
+        depends_on:
+          - auth_db
+
     api_db:
         image: mongo:latest
+        container_name: docker-api-db
+        volumes:
+            - mongodb_api:/data/db
+
+    auth_db:
+        image: mongo:latest
+        container_name: docker-auth-db
+        volumes:
+            - mongodb_auth:/data/db
