--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,6 +1,14 @@
 version: "3.5"
 
 services:
+    frontend:
+        command: npm run start
+        stdin_open: true
+        tty: true
+        volumes:
+            - ./frontend/src:/usr/src/app/src
+
+
     api:
         command: npm run dev
         volumes:
