--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
         build: ./frontend
         container_name: docker-frontend
         command: serve -s build -l 3000
-        ports:
-            - 3000:3000
         restart: unless-stopped
     api:
         build: ./api
@@ -51,3 +49,13 @@ services:
         container_name: docker-auth-db
         volumes:
             - mongodb_auth:/data/db
+
+    nginx:
+        image: nginx:stable-alpine
+        container_name: docker-nginx
+        ports:
+            - 80:80
+        volumes:
+            - ./nginx/nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
+        depends_on:
+            - frontend
