--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -2,6 +2,8 @@ version: "3.5"
 
 services:
     frontend:
+        build:
+            dockerfile: Dockerfile.dev
         command: npm run start
         stdin_open: true
         tty: true
@@ -13,3 +15,12 @@ services:
         command: npm run dev
         volumes:
             - ./api/src:/usr/src/app/src
+
+    auth:
+        command: npm run dev
+        volumes:
+            - ./auth/src:/usr/src/app/src
+
+    nginx:
+        volumes:
+            - ./nginx/nginx.conf.dev:/etc/nginx/conf.d/nginx.conf
