--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ networks:
 
 services:
     frontend:
-        build: ./frontend
+        build:
+            context: ./frontend
+            dockerfile: Dockerfile.prod
         container_name: docker-frontend
         command: serve -s build -l 3000
         restart: unless-stopped
@@ -22,11 +24,8 @@ services:
         container_name: docker-api
         command: npm run start
         restart: unless-stopped
-        ports:
-            - 3001:3001
         environment:
             - PORT=3001
-            - HOST=http://realworld-docker.com/
             - MONGO_URL=mongodb://api_db:27017/api
             - AUTH_API_URL=http://auth:3002/api
         depends_on:
@@ -39,11 +38,8 @@ services:
         container_name: docker-auth
         command: npm run start
         restart: unless-stopped
-        ports:
-            - 3002:3002
         environment:
             - PORT=3002
-            - HOST=http://realworld-docker.com/
             - MONGO_URL=mongodb://auth_db:27017/auth
             - API_URL=http://api:3001/api
         depends_on:
@@ -76,5 +72,7 @@ services:
             - ./nginx/nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
         depends_on:
             - frontend
+            - api
+            - auth
         networks:
             - realworld-docker-network
